--- a/short/templates/short/home.html
+++ b/short/templates/short/home.html
@@ -6,9 +6,9 @@
 
 <form action="{% url 'home' %}" method="post">
   {% csrf_token %}
-  <label for="link_to_short">Original Url</label>
-  <input type="text" name="link_to_short" value="{{original}}" placeholder="Url" required>
-  <label for="shortened_link">Shortened Url</label>
-  <input type="text" name="shortened_link" value="{{shortened}}" placeholder="Url">
+  <label for="original">Original Url</label>
+  <input type="text" name="original" value="{{original}}" placeholder="Url">
+  <label for="shortened">Shortened Url</label>
+  <input type="text" name="shortened" value="{{shortened}}" placeholder="Url">
   <input type="submit" value="Enter">
 </form>
